Force upload of S3 artifacts

--- a/template.yml
+++ b/template.yml
@@ -17,7 +17,7 @@ Resources:
 
 Outputs:
   Layer:
-    Description: 
+    Description: FFMPEG layer
     Value: !Ref ResourceLayer
     Export:
       Name: ffmpeg-lambda-layer
